--- a/templates/lista.html
+++ b/templates/lista.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jogoteca</title>
-</head>
-<body>
-  <div class="container">
-      <div class="page-header">
-         <h1>{{titulo}}</h1>
-      </div>
+<!--buscando local do conteudo-->
+{%extends "template.html" %}
+<!--Colocando a diretiva do template-->
+{% block conteudo%}
       <table class="table table-striped table-responsive table-bordered">
          <thead class="thead-default">
             <tr>
@@ -30,6 +22,4 @@
 
         </tbody>
      </table>
-  </div>
-</body>
-</html>
+{% endblock %}
