--- a/templates/novo.html
+++ b/templates/novo.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jogoteca</title>
-</head>
-<body>
-    <div class="container">
-      <div class="page-header">
-          <h1>{{ titulo }}</h1>
-      </div>
+<!--buscando local do conteudo-->
+{%extends "template.html" %}
+<!--Colocando a diretiva do template-->
+{% block conteudo%}
       <!--enviando um dado utilizando method post-->
       <form action="/criar" method="post">
         <fieldset>
@@ -28,6 +20,4 @@
           <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
         </fieldset>
       </form>
-    </div>
-</body>
-</html>
+{% endblock %}
